@@ -6,10 +6,6 @@ ISCraftingUI_transferOnCraftComplete = function(completeAction, recipe, playerOb
     local previousAction = result.previousAction
     local completedAction = result.completedAction
 
-    -- PI2ABUtil.Print("ISCraftingUI_transferOnCraftComplete QUEUE START",true)
-    -- PI2ABUtil.PrintQueue(playerObj)
-    -- PI2ABUtil.Print("ISCraftingUI_transferOnCraftComplete QUEUE END",true)
-
     if all then
         -- from ISCraftingUI:onCraftComplete
         if not RecipeManager.IsRecipeValid(recipe, playerObj, nil, containers) then return end
@@ -39,12 +35,25 @@ ISCraftingUI_transferOnCraftComplete = function(completeAction, recipe, playerOb
             end
         end
 
-        local action = ISCraftAction:new(playerObj, items:get(0), recipe:getTimeToMake(), recipe, container, containers)
+        local selectedItem =  items:get(0)
+        local action = ISCraftAction:new(playerObj, selectedItem, recipe:getTimeToMake(), recipe, container, containers)
         action:setOnComplete(ISCraftingUI_transferOnCraftComplete, action, recipe, playerObj, selectedItemContainer, container,containers,all,ui)
+    
+        local beforeItems
+        if recipe:isCanBeDoneFromFloor() and selectedItemContainer:getType() == "floor" then
+            local worldItem = selectedItem:getWorldItem()
+            if worldItem then
+                beforeItems = PI2ABUtil.GetObjectsOnAndAroundSquare(worldItem:getSquare())
+            end
+        end
         
+        if beforeItems == nil then
+            beforeItems = playerObj:getInventory():getItems()
+        end
+
         local timestamp = os.time()
         action.pi2ab_timestamp = timestamp
-        PI2ABComparer.create(timestamp,playerInv:getItems(),result.itemsToTransfer,result.targetWeightTransferred,result.defWeightTransferred)
+        PI2ABComparer.create(timestamp,beforeItems,result.itemsToTransfer,result.targetWeightTransferred,result.defWeightTransferred)
 
         ISTimedActionQueue.addAfter(previousAction, action)
         ISCraftingUI.ReturnItemsToOriginalContainer(playerObj, returnToContainer)
@@ -104,9 +113,21 @@ function ISCraftingUI:craft(button, all)
         if action then
             action:setOnComplete(ISCraftingUI_transferOnCraftComplete, action, recipe, playerObj,selectedItemContainer,container,self.containerList,all,self)
             
+            local beforeItems
+            if recipe:isCanBeDoneFromFloor() and selectedItemContainer:getType() == "floor" then
+                local worldItem = destroyedItem and destroyedItem:getWorldItem() or nil
+                if worldItem then
+                    beforeItems = PI2ABUtil.GetObjectsOnAndAroundSquare(worldItem:getSquare())
+                end
+            end
+            
+            if beforeItems == nil then
+                beforeItems = playerObj:getInventory():getItems()
+            end
+
             local timestamp = os.time()
             action.pi2ab_timestamp = timestamp
-            PI2ABComparer.create(timestamp,playerObj:getInventory():getItems())
+            PI2ABComparer.create(timestamp,beforeItems)
         end
     end
 end
