@@ -8,6 +8,11 @@
 [ ------ ]
 
 
+[ 1/21/26 ]
+- Fix bug where craft recipes with the "CanBeDoneFromFloor" tag would not transfer to the target container if the selected item was on the floor
+[ ------ ]
+
+
 [ ALERT_CONFIG ]
 link1 = Ko-fi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.com/amescodes,
 link2 = Workshop = https://steamcommunity.com/id/ames_games/myworkshopfiles/?appid=108600,
